assets/css/nav-styles.css
/* Start navbar styles */
.container-nav {
  width: 100%;
  max-width: 80%;
  margin: auto;
  display: flex;
  justify-content: center;
}

/*Managing navbar as per theme start*/
[data-theme='dark'] .navbar {
  background: #343a40;
}
[data-theme='dark'] .navbar ul.menu li {
  color: #ddd;
}
[data-theme='dark'] .navbar ul.menu li:hover {
  color: #fff;
}
[data-theme='dark'] .navbar ul.menu li.active {
  color: #fff;
  font-weight: 500;
}
[data-theme='dark'] .navbar ul{
  background-color: #343a40;
}

[data-theme='dark'] .navbar button{
  color: #ffff;
}

[data-theme='dark'] .navbar .red-btn{
  color: #FE6655;
}

/*Maneging navbar as per theme ends*/

.navbar {
  display: flex;
  height: 80px;
  align-items: center;
  width: 100%;
  background:white;
}

.navbar #link-btn {
  cursor: pointer;
  color: black;
}

.logo {
  width: auto;
  height: 80px;
}

/* menu class unnecessary if .navbar .menu*/
/* .menu {
  display: flex;
  justify-content: flex-end !important;
} */

.navbar .menu {
  display: flex;
  flex: 1;
  justify-content: space-evenly;
  align-items: center;
  height: 100%;
  list-style: none;
  margin-bottom: 10px;
}

.navbar ul.menu li {
  cursor: pointer;
  /* margin-bottom: 60px; */
  /* line-height: 80px; */
  font-size: 1em;
  color: #423f3f;
  transition: all ease-in 0.1s;
}

.navbar ul.menu li:hover {
  color: #000000;
}


/* margins unnecessary */
/* .navbar ul.menu li + li {
  margin-left: 20px;
}
.navbar .menu li:last-child {
  margin-left: -30px;
} */

.navbar ul.menu li.active {
  color: #000000;
}

.navbar a {
  /* background: transparent; */
  color: #000000;
  font-size: 1em;
  /* padding: 5px 20px; */
}

/* Added elements for nav */

.navbar ul.menu li:hover {
  border-bottom: 2px solid;
  border-color: #FE6655;
  transform: translateY(-3%);
}

.navbar .user-forms a:last-child {
  margin-left: 20px;
}

/* manage drop-down for extra nav space */
.navbar .dropdown .drop-price, 
.navbar .dropdown .drop-team {
  display: none;
}

@media only screen and (max-width: 1200px) {
  .navbar .dropdown .drop-price {
    display: block;
  }

  .navbar .menu-price {
    display: none;
  }
}

@media only screen and (max-width: 1000px) {
  .navbar .dropdown .drop-team {
    display: block;
  }

  .navbar .menu-team {
    display: none;
  }
}

.nav-button {
  cursor: pointer;
  width: 30px;
  height: 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  position: absolute;
  top:0;
  right: 0;
  transform: translate(-50%,50%);
}
.navbar button{
  background-color: transparent;
}
.nav-button span {
  width: 100%;
  background-color:#20014D;
  height: 3px;
}

.toggle-bar {
  /* margin: 5px 73px; */
  /* display: inline-block; */
  width: 52px;
  height: 20px;
  background: #20014d !important;
  border-radius: 50px;
  position: relative;
  cursor: pointer;
}

#toggle-checkbox {
  opacity: 0;
}

.toggle-container {
  position: absolute;
  top: -0.5px;
  left: 0;
  width: 20px;
  height: 20px;
  border-radius: 50px;
  background: #f1c40f;
  transition: transform 0.5s;
}

input:focus + .toggle-container {
  box-shadow: var(--focusShadow);
}

input:checked ~ .toggle-container {
  transform: translateX(32px);
}

/* new header styling */
.red-btn {
  border: 2px solid #FE6655;
  border-radius: 5px;
  color: #FE6655;
  padding: 10px 15px!important;
}

header {
  padding-top: 5px;
}

*:focus {
  outline: 0 !important;
}

.menu li:first-child {
  position: absolute;
  left: 8%;
}


.navbar ul li a button {
  background: transparent;
}

[data-theme='dark'] .navbar ul li a button {
  color: #fff;
}

.navbar ul li a button:hover {
  cursor: pointer;
}

.toggle-bar-mobile{
  margin: 5px 73px;
  width: 52px;
  height: 20px;
  background: #20014d!important;
  border-radius: 50px;
  position: absolute;
  cursor: pointer;
  top:0;
  right:0;
  transform: translate(-50%,75%);
}



.red-btn:hover{
  color: #fff;
  background-color: #FE6655;
  transition: 0.3s ease;
}


/* dropdown styling */
.dropbtn {
  cursor: pointer;
  background-color: #FE6655;
  font-size: 16px;
  border: none;
  border-radius: 5px;
  padding: 10px 15px!important;
}

.dropdown {
  display: inline-block;
}

#caret-down {
  position: relative;
}
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  border-radius: 5px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  border-radius: .25rem;
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {background-color: #ddd; border-radius: 5px;}

.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {
  background-color: #FE6655;
  transition: 0.2s ease;
  border: 2px solid #343A40;
}

[data-theme='dark'] .dropdown:hover .dropbtn {
  background-color: #FE6655;
  transition: 0.2s ease;
  border: 2px solid white;
}
/* end of dropdown styling */

@media only screen and (max-width: 900px) {
  .navbar {
    padding: 0 50px;
    background-color: white;
    z-index: 100;
  }

  .navbar button {
    /* display: block; */
    background-color: transparent;
  }
  .toggle-bar{
    display: none;
  }
  .navbar .menu {
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    top: 100px;
    left: 0;
    position: absolute;
    background-color: rgb(240, 234, 234);
    height: 0;
    width: 100%;
    overflow: hidden;
    transition: all ease-in-out 0.3s;
    -webkit-transition: all ease-in-out 0.3s;
    -moz-transition: all ease-in-out 0.3s;
    -ms-transition: all ease-in-out 0.3s;
    -o-transition: all ease-in-out 0.3s;
  }

  .navbar ul.open {
    height: 500px;
  }

  /* restore menu items */
  .navbar .menu-price,
  .navbar .menu-team {
    display: initial;
  }

  .navbar .dropdown .drop-price,
  .navbar .dropdown .drop-team {
    display: none;
  }

  /* .navbar ul.menu li {
    margin-bottom: 30px;
    margin-top: 30px;
  } */

  .dropdown:hover .dropdown-content {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .navbar ul.menu li + li {
    margin-left: 0px;
  }

}

@media only screen and (min-width: 900px) {
  .nav-button {
    display: none;
    visibility: hidden;
  }
  .toggle-bar-mobile{
    display: none;
  }
  .navbar {
    padding: 2em;
    background-color: white;
  }

  .navbar ul.menu li {
    line-height: normal;
  }

  /* move to global */
  /* .navbar ul.menu li:hover {
    border-bottom: 1px solid;
    border-color: #FE6655;
    transform: translateY(-3%);
  } */
  .navbar span {
    padding: 3px;
  }
  
}

